--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username: 5iddy
 # Build settings
 # theme: minima
 sass:
-  sass_dir: _sass
+  sass_dir: src/_sass
   style: compressed
 
 source: src
