--- a/_config.yml
+++ b/_config.yml
@@ -36,13 +36,15 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-toc
 
 markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
   input: GFM
   auto_ids: true
-  toc_levels: 1..3
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -90,7 +92,17 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      toc: true
   - scope:
       path: ""
     values:
       layout: "default"
+
+# jekyll-toc settings
+toc:
+  min_level: 1
+  max_level: 6
+  ordered_list: false
+  list_id: toc
+  list_class: menu-list
+  sublist_class: menu-list
