--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "bundle exec jekyll server --livereload -w",
+    "serve": "bundle exec jekyll server --livereload",
     "build-dev": "webpack build --watch",
     "build": "NODE_ENV=production webpack build",
     "clean": "rm -rf ./src/assets/js/*"
