--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,11 @@ plugins:
   - jekyll-gist
   - jekyll-paginate
 
+paginate: 5
+paginate_path: "/blog/page:num/"
 markdown: kramdown
 kramdown:
+  parse_block_html: true
   syntax_highlighter: rouge
   input: GFM
   auto_ids: true
